--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 .gradle
 /local.properties
 /.idea/libraries
-/.idea/modules.xml
 /.idea/workspace.xml
-/.idea
+/.idea/caches
 .DS_Store
 /build
 /captures
