--- a/fbvn_api/src/main/AndroidManifest.xml
+++ b/fbvn_api/src/main/AndroidManifest.xml
@@ -1,10 +1,2 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
-    package="com.appnet.android.football.fbvn">
-
-    <application android:allowBackup="true" android:label="@string/app_name"
-        android:supportsRtl="true">
-
-    </application>
-
-</manifest>
+    package="com.appnet.android.football.fbvn" />
